[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scoreboard.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 1, 1 )
light_color = Color( 0.219608, 0.211765, 0.227451, 1 )
dark_color = Color( 0.219608, 0.211765, 0.227451, 1 )
border_size = 5
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.647059, 0.647059, 0.647059, 1 )
light_color = Color( 0.219608, 0.211765, 0.227451, 1 )
dark_color = Color( 0.219608, 0.211765, 0.227451, 1 )
border_size = 5
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0, 0, 1 )
light_color = Color( 0.219608, 0.211765, 0.227451, 1 )
dark_color = Color( 0.219608, 0.211765, 0.227451, 1 )
border_size = 5
border_blend = true
draw_bg = true

[node name="Scoreboard" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 90.0
script/script = ExtResource( 1 )

[node name="LeftAppealBar" type="ProgressBar" parent="."]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 380.0
margin/top = 90.0
margin/right = 760.0
margin/bottom = 130.0
custom_styles/fg = SubResource( 1 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 25.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="LeftAppealPercentage" type="Label" parent="LeftAppealBar"]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 40.0
margin/right = 80.0
margin/bottom = 80.0
text = "25%"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LeftAppealLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 70.0
margin/bottom = 54.0
text = "left appeal"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TruthinessBar" type="ProgressBar" parent="."]

rect/rotation = 90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 380.0
margin/top = 90.0
margin/right = 460.0
margin/bottom = 130.0
custom_styles/fg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="TruthinessPercentage" type="Label" parent="TruthinessBar"]

rect/rotation = 270.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 40.0
text = "100%"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TruthinessLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 360.0
margin/top = 0.0
margin/right = 440.0
margin/bottom = 14.0
text = "truthiness"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RightAppealBar" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 420.0
margin/top = 50.0
margin/right = 800.0
margin/bottom = 90.0
custom_styles/fg = SubResource( 3 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 25.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="RightAppealPercentage" type="Label" parent="RightAppealBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
text = "25%"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RightAppealLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 720.0
margin/top = 40.0
margin/right = 800.0
margin/bottom = 54.0
text = "right appeal"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AppealBurndownTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


